Fix new code layout bugs

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
     z-index: 17;
     background: #404040;
     height: 31px;
+    padding-bottom: 0;
     box-shadow: 0 -2px 1px #333 inset;
     border-bottom: 5px solid #606060;
     white-space: nowrap;
@@ -66,6 +67,9 @@
     margin-top: 8px;
     margin-left: 8px;
 }
+.content > #open-files-container .sidebar-selection-triangle {
+    display: none !important;
+}
 .content.tabs + #main-toolbar {
     visibility: hidden;
     border-bottom: none;
@@ -80,4 +84,7 @@
     right: 10px;
     top: 5px;
     z-index: 99;
+}
+.content.tabs + #main-toolbar > .buttons > a {
+    min-height: 15px;
 }
